test vec insert

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 98)
 
 add_executable(ft_containers testing/main.cpp vector/vector.hpp iterators/vector_iterators.hpp stack/stack.hpp utils/utils.hpp testing/testing.hpp testing/stack_testing.cpp
         map/map.h map/pair.hpp map/RBTree.hpp
-        map/node.hpp)
+        map/node.hpp testing/vector_testing.cpp)
